--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "fluent-ffmpeg": "^2.1.3"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
+    "@types/fluent-ffmpeg": "^2.1.26",
     "@types/node": "^22.5.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.4"
